fixed footer - ::after-element, on mobile (width)

--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -2,6 +2,12 @@
   max-width: 340px;
 
   @media (max-width: $mobile-width-only) {
+    /*
     padding: 0 0 7px 0;
+    */
+    position: relative;
+    max-width: 768px;
+    padding: 0 5%;
+
   }
 }
