--- a/source/sass/blocks/cite-map.scss
+++ b/source/sass/blocks/cite-map.scss
@@ -3,8 +3,10 @@
   margin-right: 58px;
 
   @media (max-width: $mobile-width-only) {
+    position: relative;
+    max-width: 768px;
     margin: 0;
-    padding: 28px 0;
+    padding: 0 5%;
 
     &::after {
       content: "";
@@ -31,5 +33,15 @@
 
   @media (max-width: $mobile-width-only) {
     margin: 0;
+  }
+}
+
+.cite-map__accordeon-btn {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
