--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -82,14 +82,14 @@
   max-width: 995px;
   justify-content: space-between;
 
-  @media (max-width: $tablet-width-only) {
+  @media (max-width: $tablet-width-only) { /*1023*/
     justify-content: space-around;
     padding: 40px 0 36px;
   }
 
-  @media (max-width: $mobile-width-only) {
+  @media (max-width: $mobile-width-only) { /*768*/
     flex-direction: column;
-    padding: 0 5%;
+    padding: 0;
   }
 }
 
@@ -104,7 +104,7 @@
   color: #1b2d37;
 
   @media (max-width: $mobile-width-only) {
-    margin: 0 0 32px;
+    margin: 30px 0 34px;
   }
 }
 
